--- a/project_charter/borrador2/parts/G4-PC-2.SatelliteDevelopment-2016-10-03.tex
+++ b/project_charter/borrador2/parts/G4-PC-2.SatelliteDevelopment-2016-10-03.tex
@@ -1,5 +1,12 @@
-\title{\textbf{\textit{Astrea}} Project Charter - Planning of the project: Payload}
-
+\title{\textbf{\textit{Astrea}} Project Charter - 2. Satellite}
+\author{
+        \\\\
+        Roger Fraixedas Lucea\\
+        David Morata Carranza\\
+        Marina Pons Daza\\
+        Eva Mar\'{i}a Urbano Gonz\'{a}lez\\
+        \\\\
+}
 
 \date{\today}
 
@@ -19,12 +26,17 @@
 \subsection{Identification of the tasks and description of the tasks}
 \begin{tabular}{ | l | l | p{7cm} |}
 \hline
-ID & Work Package & Biref task description list\\ \hline
-1.3.1 & Payload antenna &  Task 1-Antenna: Calculation of the size of the antenna needed to communicate with the other satellites. \newline
+ID & Work Package & Biref task description list\\ 
+\hline
+2.1 & Spacecraft Subsystems &  Task 1-Establishment of equirements once orbits are defined. \newline
+Task 2-External enterprise hiring for hardware and software design.
+\newline
+\hline
+2.2.1 & Payload antenna &  Task 1-Antenna: Calculation of the size of the antenna needed to communicate with the other satellites. \newline
 Task 2-Antenna: Search the available antenna in the market that best fits the needs of the project.
 \\
 \hline
-1.3.2 & Payload Data Handling System (PDHS) &  Task 1-Selection of the configuration. \newline
+2.2.2 & Payload Data Handling System (PDHS) &  Task 1-Selection of the configuration. \newline
 Task 2-Establishment of the desired hardware and software.
 \newline
 Task 3-Search the available PDHS in the market that best fits the needs of the project.
@@ -37,8 +49,9 @@ Task 3-Search the available PDHS in the market that best fits the needs of the p
 \begin{tabular}{ | l | l | r | p{5cm} | }
 \hline
 ID & Work Package & Time (h) & Prelations \\ \hline
-1.3.1 & Payload antenna & 30 & BF-2.3 \\ \hline
-1.3.2 & PDHS & 50 & BF-2.3 \\ \hline
+2.1 & Spacecraft Subsystems & 40 & BF-3 \\ \hline
+2.2.1 & Payload antenna & 40 & BF-3 \\ \hline
+2.2.2 & PDHS & 50 & BF-3 \\ \hline
 \end{tabular}
 
 
@@ -49,13 +62,14 @@ ID & Work Package & Time (h) & Prelations \\ \hline
 \begin{tabular}{ | l | r | r | }
 \hline
 Work Package & Time (h) & Labour cost (eur) \\ \hline
-Satellite design &  &  \\ \hline
+Satellite &  &  \\ \hline
+~~Spacecraft Subsystems & 40 & 800 \\ \hline
 ~~Payload &  &  \\ \hline
-~~~~Antenna & 30 & 500 \\ \hline
+~~~~Antenna & 40 & 800 \\ \hline
 ~~~~PDHS & 50 & 1000 \\ \hline
  &  &  \\ \hline
-\textbf{Total} & \textbf{80} & \textbf{1500} \\ \hline
-\textbf{Total estimated} & \textbf{80} & \textbf{1500} \\
+\textbf{Total} & \textbf{130} & \textbf{2600} \\ \hline
+\textbf{Total estimated} & \textbf{130} & \textbf{2600} \\
 \hline
 \end{tabular}
  
