--- a/project_charter/borrador2/parts/G4-PC-2.SatelliteDevelopment-2016-10-03.tex
+++ b/project_charter/borrador2/parts/G4-PC-2.SatelliteDevelopment-2016-10-03.tex
@@ -1,4 +1,4 @@
-\title{\textbf{\textit{Astrea}} Project Charter - 2. Satellite}
+\title{\textbf{\textit{Astrea}} Project Charter - 2. Satellite Development}
 \author{
         \\\\
         Roger Fraixedas Lucea\\
